Fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: var(--size-l);
+  width: 90vw;
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
