--- a/src/components/Badge/Badge.css
+++ b/src/components/Badge/Badge.css
@@ -3,6 +3,7 @@
   padding: var(--size-xs) var(--size-m);
   border-radius: var(--border-radius-max);
   border: 1px solid var(--badge-highlight-color);
+  user-select: none;
 }
 
 .Badge--HasActiveState:hover,
