--- a/src/components/ToDoList/ToDoList.css
+++ b/src/components/ToDoList/ToDoList.css
@@ -2,6 +2,6 @@
   display: flex;
   flex-direction: column;
   gap: var(--size-l);
-  width: 90vw;
+  width: 100%;
   max-width: 480px;
 }
